<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:background="@color/background_ToDo_app"
    android:orientation="vertical"
    android:padding="8dp">

    <EditText
        android:id="@+id/etTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="text"
        android:backgroundTint="@color/white"
        android:hint="@string/add_a_task"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <RadioGroup
        android:id="@+id/rgCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@id/rbBusiness"
        android:padding="8dp">

        <RadioButton
            android:id="@+id/rbBusiness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/business_category"
            android:text="@string/negocios"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/rbPersonal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/personal_category"
            android:text="@string/personal"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/rbOther"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/other_category"
            android:text="@string/other"
            android:textColor="@color/white" />
    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/accent"
        android:text="@string/agregar"
        android:textColor="@color/white" />

</LinearLayout>
